# utf8proj

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  QUICK_REFERENCE.md  README.md  RFC.md  ROADMAP.md  SYSTEM_INSTRUCTIONS.md  TEST_SPECIFICATIONS.md
.github/workflows/: ci.yml  deploy-playground.yml  playground-tests.yml  record-demos.yml  release.yml
crates/utf8proj-cli/: Cargo.toml
crates/utf8proj-cli/src/: diagnostics.rs  main.rs
crates/utf8proj-cli/src/bench/: bdd.rs  mod.rs  psplib.rs  synthetic.rs
crates/utf8proj-cli/tests/: diagnostics.rs  exit_codes.rs  fix_command.rs  init_command.rs  status_command.rs
crates/utf8proj-cli/tests/fixtures/diagnostics/: e001_circular_specialization.proj  e001_circular_specialization.stderr  e002_profile_without_rate.proj  e002_profile_without_rate.stderr  e002_profile_without_rate.strict.stderr  e003_infeasible_constraint.proj  e003_infeasible_constraint.stderr  h001_mixed_abstraction.proj  h001_mixed_abstraction.stderr  h002_unused_profile.proj  h002_unused_profile.stderr  h003_unused_trait.proj  h003_unused_trait.stderr  h004_unconstrained_task.proj  h004_unconstrained_task.stderr  i001_success.proj  i001_success.stderr  w001_abstract_assignment.json  w001_abstract_assignment.proj  w001_abstract_assignment.stderr  w001_abstract_assignment.strict.stderr  w002_wide_cost_range.proj  w002_wide_cost_range.stderr  w003_unknown_trait.proj  w003_unknown_trait.stderr  w004_approximate_leveling.proj  w004_approximate_leveling.stderr
crates/utf8proj-core/: Cargo.toml
crates/utf8proj-core/src/: baseline.rs  lib.rs  status.rs
crates/utf8proj-lsp/: Cargo.toml  README.md
crates/utf8proj-lsp/src/: diagnostics.rs  hover.rs  main.rs  navigation.rs
crates/utf8proj-parser/: Cargo.toml
crates/utf8proj-parser/src/: baseline.rs  lib.rs
crates/utf8proj-parser/src/native/: baseline_grammar.pest  grammar.pest  mod.rs
crates/utf8proj-parser/src/tjp/: grammar.pest  mod.rs
crates/utf8proj-parser/tests/: hierarchical_tasks.rs
crates/utf8proj-render/: Cargo.toml
crates/utf8proj-render/src/: excel.rs  gantt.rs  lib.rs  mermaid.rs  plantuml.rs
crates/utf8proj-render/tests/: excel_auto_fit.rs  excel_integration.rs  gantt_integration.rs  text_renderers.rs
crates/utf8proj-solver/: Cargo.toml
crates/utf8proj-solver/src/: bdd.rs  cpm.rs  dag.rs  leveling.rs  lib.rs  optimal.rs
crates/utf8proj-solver/tests/: calendar_diagnostics.rs  complete_task_scheduling.rs  constraint_wiring.rs  container_dependency_diagnostics.rs  cpm_correctness.rs  duplicate_task_ids.rs  earned_value.rs  hierarchical_scheduling.rs  progress_aware_cpm.rs  progress_tracking.rs  resource_leveling.rs  temporal_regimes.rs  variance_reporting.rs
crates/utf8proj-wasm/: Cargo.toml
crates/utf8proj-wasm/src/: lib.rs
docs/: CHEATSHEET.md  DESIGN_PHILOSOPHY.md  DIAGNOSTICS.md  EDITOR_SETUP.md  EXPLAINABILITY.md  GRAMMAR.md  MILESTONE_PROGRESS_V1.md  MS_PROJECT_COMPARISON.md  RFC-0003-STATUS.md  RFC-FOCUS-VIEW.md  SCHEDULING_ANALYSIS.md  SPEC_HIERARCHICAL_TASKS.md  V1_CHECKLIST.md  VSCODE_QUICKSTART_MACOS.md  VSCODE_QUICKSTART_WINDOWS.md  WISHLIST.md  benchmark-report.md  constraint-semantics-v0.md  index.html  tj3-vs-utf8proj-comparison.md  tutorial.md
docs/design-reviews/: DR-2026-01-W014-container-deps.md
docs/logos/: README.md
docs/pkg/: package.json  utf8proj_wasm.d.ts  utf8proj_wasm.js  utf8proj_wasm_bg.wasm  utf8proj_wasm_bg.wasm.d.ts
docs/rfc/: DESIGN_REFINEMENT_SUMMARY.md  README.md  RFC-0001-ARCHITECTURE.md  RFC-0001-PROGRESSIVE-RESOURCE-REFINEMENT.md  RFC-0002-CPM-CORRECTNESS.md  RFC-0003-CONTAINER-DEPENDENCY-SEMANTICS.md  RFC-0004-PROGRESS-AWARE-CPM.md  RFC-0004-PROGRESSIVE-RESOURCE-REFINEMENT.md  RFC-0004-WASM-PLAYGROUND-AI-INTEGRATION.md  RFC-0005-RESOURCE-LEVELING-STATUS.md  RFC-0006-FOCUS-VIEW.md  RFC-0007-WASM-PLAYGROUND-AI-INTEGRATION.md  RFC-0008-PROGRESS-AWARE-CPM.md  RFC-0009-EXCEL-WASM-EXPORT.md  RFC-0010-AUTOMATED-TESTING-AND-DEMOS.md  RFC-0011-CLASSIFIER-ABSTRACTION.md  RFC-0012-TEMPORAL-REGIMES.md  RFC-0013-baseline-management.md  RFC-0014-SCALING-RESOURCE-LEVELING.md  RFC-0015-BENCHMARKING-VALIDATION.md  RFC-0016-PLAYGROUND-AUDIT-CONSOLE.md  RFC-0017-NOW-LINE.md  RFC-0018-EXCEL-PROGRESS-TRACKING.md  RFC_GUIDE.md  UTF8PROJ_DESIGN_DECISIONS.md  UTF8PROJ_DESIGN_SURVEY_PART1.md  UTF8PROJ_DESIGN_SURVEY_PART2.md  UTF8PROJ_IMPLEMENTATION_ROADMAP.md  UTF8PROJ_RFC_MASTER.md
docs/rfcs/: RFC003_CONTAINER_DEPENDENCY_SEMANTICS.md
docs/specs/: RFC_002_CPM_Correctness_Evolution.md  TEST_SPEC_CONTAINER_DEPS.md  architecture_diagrams.md  reference_cpm.rs
examples/: 04_progress_tracking.proj  05_software_with_progress.proj  README_PROGRESS.md  acso_tutorial.proj  crm_migration.proj  crm_migration.tjp  crm_simple.proj  crm_simple.proj.baselines  crm_simple.tjp  enterprise_10k.proj  training_template.proj
examples/wasm-dashboard/: README.md  index.html
playground/: .gitignore  build.sh  index.html  package.json  playwright.config.js  playwright.demo.config.js  syntax.html
playground/src/: main.js
playground/styles/: main.css
playground/tests/: demo-features.spec.js  demo-quickstart.spec.js  e2e.spec.js  helpers.js
syntax/: README.md  proj.vim  utf8proj.tmLanguage.json
syntax/ftdetect/: proj.vim
tests/fixtures/: simple.proj
tools/: generate_large_project.py  psplib_to_proj.py
tools/benchmarks/: README.md  benchmark_runner.py  run_psplib.sh
tools/mpp_to_proj/: .gitignore  README.md  mpp_to_proj.py  setup_companion.sh  test_mpp_to_proj.py
