# utf8proj - Project Scheduling Engine for Rust
# https://github.com/alanbld/utf8proj

[workspace]
resolver = "2"
members = [
    "crates/utf8proj-core",
    "crates/utf8proj-parser",
    "crates/utf8proj-solver",
    "crates/utf8proj-render",
    "crates/utf8proj-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alanbld/utf8proj"
keywords = ["scheduling", "project-management", "gantt", "cpm", "taskjuggler"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
utf8proj-core = { path = "crates/utf8proj-core" }
utf8proj-parser = { path = "crates/utf8proj-parser" }
utf8proj-solver = { path = "crates/utf8proj-solver" }
utf8proj-render = { path = "crates/utf8proj-render" }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XML (for MSPDI)
quick-xml = { version = "0.31", features = ["serialize"] }

# SVG rendering
svg = "0.17"

# Numeric
rust_decimal = { version = "1.33", features = ["serde"] }
num-bigint = "0.4"

# BDD (for future use)
# oxidd = "0.7"

# SAT (for future use)
# varisat = "0.2"

# Testing
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3.10"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Profile for release builds
[profile.release]
lto = true
codegen-units = 1
strip = true

