# utf8proj - Project Scheduling Engine for Rust
# https://github.com/alanbld/utf8proj

[workspace]
resolver = "2"
members = [
    "crates/utf8proj-core",
    "crates/utf8proj-parser",
    "crates/utf8proj-solver",
    "crates/utf8proj-render",
    "crates/utf8proj-cli",
    "crates/utf8proj-lsp",
    "crates/utf8proj-wasm",
]

[workspace.package]
version = "0.9.2"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alanbld/utf8proj"
keywords = ["scheduling", "project-management", "gantt", "cpm", "taskjuggler"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates (version required for crates.io publishing)
utf8proj-core = { version = "0.9.2", path = "crates/utf8proj-core" }
utf8proj-parser = { version = "0.9.2", path = "crates/utf8proj-parser" }
utf8proj-solver = { version = "0.9.2", path = "crates/utf8proj-solver" }
utf8proj-render = { version = "0.9.2", path = "crates/utf8proj-render" }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XML (for MSPDI)
quick-xml = { version = "0.31", features = ["serialize"] }

# SVG rendering
svg = "0.17"

# Excel rendering
rust_xlsxwriter = { version = "0.80", features = ["wasm"] }

# Numeric
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"
num-bigint = "0.4"

# BDD - lightweight decision diagrams for resource conflict resolution
biodivine-lib-bdd = "0.5"

# Alternative BDD libraries (not currently used)
# oxidd = "0.7"      # Heavier, concurrent framework
# varisat = "0.2"    # SAT solver

# Testing
pretty_assertions = "1.4"
insta = { version = "1.34", features = ["yaml"] }
tempfile = "3.10"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[workspace.lints.clippy]
# Set lint groups with lower priority so individual overrides take precedence
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow specific pedantic/nursery lints that require significant refactoring
# or have many false positives in this codebase
must_use_candidate = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
redundant_closure_for_method_calls = "allow"
use_self = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
return_self_not_must_use = "allow"
derive_partial_eq_without_eq = "allow"
redundant_guards = "allow"
float_cmp = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
unnecessary_cast = "allow"
too_many_lines = "allow"
redundant_clone = "allow"
option_if_let_else = "allow"
needless_continue = "allow"
inefficient_to_string = "allow"
clone_on_copy = "allow"
used_underscore_binding = "allow"
unused_self = "allow"
unreadable_literal = "allow"
trivially_copy_pass_by_ref = "allow"
too_many_arguments = "allow"
suboptimal_flops = "allow"
struct_excessive_bools = "allow"
single_match = "allow"
single_char_pattern = "allow"
similar_names = "allow"
semicolon_if_nothing_returned = "allow"
only_used_in_recursion = "allow"
self_only_used_in_recursion = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"
needless_lifetimes = "allow"
needless_borrows_for_generic_args = "allow"
manual_let_else = "allow"
manual_div_ceil = "allow"
ignored_unit_patterns = "allow"
if_same_then_else = "allow"
if_not_else = "allow"
format_push_string = "allow"
fn_params_excessive_bools = "allow"
comparison_chain = "allow"
collection_is_never_read = "allow"
collapsible_str_replace = "allow"
cloned_instead_of_copied = "allow"
assign_op_pattern = "allow"
assigning_clones = "allow"
match_wildcard_for_single_variants = "allow"
significant_drop_tightening = "allow"
wildcard_imports = "allow"
derivable_impls = "allow"
implicit_clone = "allow"
inherent_to_string = "allow"
redundant_else = "allow"
regex_creation_in_loops = "allow"
single_match_else = "allow"
unnecessary_map_or = "allow"
useless_format = "allow"
wildcard_in_or_patterns = "allow"
field_reassign_with_default = "allow"
default_constructed_unit_structs = "allow"

# Profile for release builds
[profile.release]
lto = true
codegen-units = 1
strip = true

