[package]
name = "utf8proj-lsp"
description = "Language Server Protocol implementation for utf8proj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "utf8proj-lsp"
path = "src/main.rs"

[dependencies]
# Internal crates
utf8proj-core.workspace = true
utf8proj-parser.workspace = true
utf8proj-solver.workspace = true

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
