[package]
name = "utf8proj-lsp"
description = "Language Server Protocol implementation for utf8proj"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "utf8proj-lsp"
path = "src/main.rs"

[dependencies]
# Internal crates
utf8proj-core.workspace = true
utf8proj-parser.workspace = true
utf8proj-solver.workspace = true

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Date/time for calendar impact
chrono = "0.4"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
chrono = "0.4"
rust_decimal.workspace = true
rust_decimal_macros.workspace = true

[lints]
workspace = true
