[package]
name = "utf8proj-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for utf8proj scheduling engine"
keywords = ["wasm", "scheduling", "gantt", "webassembly"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
utf8proj-core.workspace = true
utf8proj-parser.workspace = true
utf8proj-solver.workspace = true
utf8proj-render.workspace = true

wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
getrandom.workspace = true

[dependencies.web-sys]
workspace = true
features = ["console"]

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
