[package]
name = "utf8proj-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for utf8proj scheduling engine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
utf8proj-core = { path = "../utf8proj-core" }
utf8proj-parser = { path = "../utf8proj-parser" }
utf8proj-solver = { path = "../utf8proj-solver" }
utf8proj-render = { path = "../utf8proj-render" }

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
chrono = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
